src/test/deca/context/invalid/initialization/separated-dec-init.deca
// Description:
//    Programme minimaliste effectuant une déclaration et initialisation séparées.
//
// Resultats:
//    error : types incompatibles
//
// Historique:
//    cree le 01/01/2025

{
    int a ;
    a = true;
}